--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
 
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li class="dropdown">
+      <li class="dropdown" appDropdown>
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1
           <span class="caret"></span>
         </a>
