--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs12">
-    <img src="" alt="" class="img-responsive">
+    <img src="{{recipeItem.imagePath}}" alt="" class="img-responsive">
   </div>
 </div>
 
@@ -10,7 +10,7 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group" appDropdown>
       <button class="btn btn-primary dropdown-toggle">
         Manage Recipe<span class="caret"></span>
       </button>
