--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -4,10 +4,9 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" >
   <div class="col-xs-12">
-    <app-recipe-item></app-recipe-item>
+    <app-recipe-item *ngFor="let recipeEL of recipes" [recipe]="recipeEL" (recipeSelected)="recipeListOutput(recipeEL)"></app-recipe-item>
   </div>
 </div>
 
-<!-- *ngFor="let recipeEL of recipes" [recipe]="recipeEL" (recipeSelected)="recipeListOutput(recipeEL)" -->
