--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,15 +1,15 @@
 <form class="container">
     <div class="row">
       <div class="col-sm-5 form-group">
-        <input type="text" class="form-control" placeholder="Name">
+        <input type="text" class="form-control" placeholder="Name" #nameInput>
       </div>
       <div class="col-sm-2 form-group">
-        <input type="text" class="form-control" placeholder="Amount">
+        <input type="number" class="form-control" placeholder="Amount" #amountInput>
       </div>
     </div>
     <div>
-        <button class="btn btn-success" style="margin:5px" type="submit">Add</button>
-        <button class="btn btn-danger" style="margin:5px" type="button">Delete</button>
-        <button class="btn btn-primary" style="margin:5px" type="submit">Clear</button>
+        <button class="btn btn-success" style="margin:5px" type="submit" (click)="onAddItem()">Add</button>
+        <button class="btn btn-danger" style="margin:5px" type="button" (click)="onDeleteItem()">Delete</button>
+        <button class="btn btn-primary" style="margin:5px" type="submit" (click)="onClear()">Clear</button>
         </div>
   </form>
