--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row border-bottom">
-    <app-shopping-edit></app-shopping-edit>
+    <app-shopping-edit (IngredientAdded)="onIngredientAdded($event)"></app-shopping-edit>
   </div>
  <ul class="list-group">
    <a class="list-group-item" *ngFor= "let ingredient of ingredients">
